# todolist-django

./: Dockerfile  Dockerfile-celery  README.md  pyproject.toml  requirements.txt
jobs/: todolist-celery.nomad.hcl  todolist-redis.nomad.hcl  todolist-web.nomad.hcl
tasks/: models.py  serializers.py  urls.py  views.py
todolist/: celery.py  requirements.txt  settings.py  urls.py  wsgi.py
todolist/tasks/: dbapi.py  models.py  urls.py  views.py
todolist/tasks/migrations/: 0001_initial.py  0002_auto_20160409_1924.py  0003_auto_20160409_1925.py
todolist/todolist/: settings.py
