[tool.poetry]
name = "todolist-django"
version = "0.1.0"
description = ""
authors = ["Sourav Basu <souravbasu17@zohomail.in>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
celery = "^5.4.0"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
whitenoise = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
